# ftplite

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  common.cpp  common.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  FileManager.cpp  FileManager.hpp  MetadataStore.cpp  MetadataStore.hpp  Server.cpp  Server.hpp  main.cpp
